--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.7.6",
-    "core-js": "^3.6.5",
     "dayjs": "^1.10.5",
     "js-cookie": "^2.2.1",
     "local-storage": "./lib/local-storage-v1.4.2.tgz",
@@ -45,6 +44,7 @@
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.0",
+    "core-js": "^3.6.5",
     "cos-nodejs-sdk-v5": "^2.9.21",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
@@ -62,6 +62,7 @@
     "vuepress": "^1.5.2",
     "vuepress-plugin-clean-urls": "^1.1.2",
     "vuepress-plugin-demo-container": "^0.2.0",
+    "vuepress-plugin-smooth-scroll": "^0.0.10",
     "vuepress-theme-antdocs": "^1.3.5"
   },
   "release-it": {
