--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "styled-tools": "^1.7.2",
     "v-click-outside": "^3.1.2",
     "vue-styled-components": "./lib/vue-styled-components-v1.6.0.tgz",
+    "vuepress-plugin-demo-container": "./lib/demo-container-v0.2.0.tgz",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
@@ -61,7 +62,6 @@
     "vue-template-compiler": "^2.6.11",
     "vuepress": "^1.5.2",
     "vuepress-plugin-clean-urls": "^1.1.2",
-    "vuepress-plugin-demo-container": "^0.2.0",
     "vuepress-plugin-smooth-scroll": "^0.0.10",
     "vuepress-theme-antdocs": "^1.3.5"
   },
