--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     }
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "husky": {
     "hooks": {
