--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "styled-tools": "^1.7.2",
     "v-click-outside": "^3.1.2",
     "vue-styled-components": "./lib/vue-styled-components-v1.6.0.tgz",
-    "vuepress-plugin-demo-container": "./lib/demo-container-v0.2.0.tgz",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
@@ -43,6 +42,7 @@
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
+    "@vuepress/plugin-back-to-top": "^1.8.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.0",
     "core-js": "^3.6.5",
@@ -62,6 +62,7 @@
     "vue-template-compiler": "^2.6.11",
     "vuepress": "^1.5.2",
     "vuepress-plugin-clean-urls": "^1.1.2",
+    "vuepress-plugin-demo-container": "./lib/demo-container-v0.2.0.tgz",
     "vuepress-plugin-smooth-scroll": "^0.0.10",
     "vuepress-theme-antdocs": "^1.3.5"
   },
