--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doui-vue",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Common collection based on Vue2 and Ant Design Vue package",
   "author": "jaydon<vshow@dooomi.com>",
   "homepage": "http://doui.dooomi.com",
@@ -19,7 +19,7 @@
   ],
   "scripts": {
     "dev": "vuepress dev docs",
-    "build:lib": "vue-cli-service build --target lib --formats umd-min src/index.js",
+    "build:lib": "vue-cli-service build --target lib --formats umd-min src/index.js && cpx 'src/styles/mixin.scss' dist",
     "deploy:doc": "vuepress build docs && node deploy.js",
     "deploy:lib": "yarn build:lib && release-it -- patch",
     "release": "npm-run-all deploy:*"
@@ -33,6 +33,7 @@
     "normalize.css": "^8.0.1",
     "styled-tools": "^1.7.2",
     "v-click-outside": "^3.1.2",
+    "vue-router": "^3.5.2",
     "vue-styled-components": "./lib/vue-styled-components-v1.6.0.tgz",
     "vuex": "^3.1.3"
   },
@@ -47,6 +48,7 @@
     "babel-plugin-import": "^1.13.0",
     "core-js": "^3.6.5",
     "cos-nodejs-sdk-v5": "^2.9.21",
+    "cpx": "^1.5.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.2.5",
