--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "normalize.css": "^8.0.1",
     "styled-tools": "^1.7.2",
     "v-click-outside": "^3.1.2",
+    "vue-clipboard2": "^0.3.1",
     "vue-styled-components": "./lib/vue-styled-components-v1.6.0.tgz",
     "vuex": "^3.1.3"
   },
