--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "src/**/*.{vue,css,less,scss}": [
       "prettier --write",
       "stylelint --fix"
-    ]
+    ],
+    "*.md": "prettier --write"
   },
   "stylelint": {
     "extends": [
